welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:17: error: not found: value sortietrouvee
    sortietrouvee()="True"
    ^Poucet:19: error: not found: value fini
    fini
    ^